test/parser/cases/invalid/small/incomplete_type_argument.cp
main()
{
    let value: [i32;] = [1];
}
